# upskilling_homework

./: README.md
CICD_1_Homework/: README.md
CICD_1_HomeworkSolution/: README.md
CICD_2_Homework/: README.md
CICD_2_HomeworkSolution/: README.md
CICD_3_Homework/: README.md
CICD_3_HomeworkSolution/: README.md
Embedded_III_Homework/: README.md
Embedded_III_HomeworkSolution/: README.md  Task1.c  Task2.c  Task3.c  Task4.c
Embedded_II_Homework/: README.md
Embedded_II_HomeworkSolution/: README.md  Task1.c  Task2.c  Task3.c  Task4.c  Task5.c
Embedded_IV_Homework/: README.md
Embedded_IV_HomeworkSolution/: README.md  extension1.c  extension2.c  tictactoe.c
Embedded_I_Homework/: README.md
Embedded_I_HomeworkSolution/: README.md  Task1.c  Task2.c  Task3.c  Task4.c  Task5.c
Embedded_V_Homework/: README.md
Embedded_V_HomeworkSolution/: README.md  car.cpp  car.h  rental_system.cpp
Patterns_III_Homework/: README.md
Patterns_III_HomeworkSolution/: README.md
Patterns_II_Homework/: README.md
Patterns_II_HomeworkSolution/: README.md
Patterns_IV_Homework/: README.md
Patterns_IV_HomeworkSolution/: README.md
Patterns_I_Homework/: README.md
Patterns_I_HomeworkSolution/: README.md
SW_Dev_Effectiveness_III_Homework/: README.md
SW_Dev_Effectiveness_III_HomeworkSolution/: LibrarySystem.cpp  README.md
SW_Dev_Effectiveness_II_Homework/: README.md
SW_Dev_Effectiveness_II_HomeworkSolution/: README.md
SW_Dev_Effectiveness_IV_HomeworkSolution/: CMakeLists.txt  README.md  shopping_cart.h  shopping_cart_tests.cpp
SW_Quality_III_Homework/: README.md
(+14 files in other folders)
